test/trivial/sungeun/bad_config_vals.good
bad_config_vals.chpl:1: error: config var out of range
