test/trivial/sungeun/bad_config_vals.chpl
config var i:  int(32) = max(int(32));
config var il: int(64) = max(int(64));
config var u:  uint(32) = max(uint(32));
config var ul: uint(64) = max(uint(64));

writeln(i);
writeln(il);
writeln(u);
writeln(ul);

